[package]
name = "stacked-set"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[features]
cons = []
collection = []
alloc-vec = ["collection"]
alloc-tree = ["collection"]

[[bench]]
name = "cons"
harness = false

[[bench]]
name = "alloc_vec"
harness = false
required-features = ["alloc-vec"]

[[bench]]
name = "alloc_tree"
harness = false
required-features = ["alloc-tree"]

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[lints.clippy]
module_name_repetitions = "allow"

