[package]
name = "stacked-set"
version = "0.1.0"
edition = "2024"
authors = ["Diachenko Artem", "Artem 34ty804krytp92e239eku@gmail.com"]
description = "Set interface, allowing stack-only implementations"
documentation = "https://dzuchun.github.io/stacked-set/stacked-set/index.html"
readme = "README.md"
repository = "https://github.com/Dzuchun/stacked-set"
license = "LGPL-3.0-or-later"
keywords = []
categories = []
exclude = ["benches", "tests", ".github", ".gitignore"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["cons"]
cons = []
collection = []
alloc-vec = ["collection"]
alloc-tree = ["collection"]
std-hash = ["collection"]

[[bench]]
name = "cons"
harness = false

[[bench]]
name = "alloc_vec"
harness = false
required-features = ["alloc-vec"]

[[bench]]
name = "alloc_tree"
harness = false
required-features = ["alloc-tree"]

[[bench]]
name = "std_hash"
harness = false
required-features = ["std-hash"]

# source: https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items", "--no-deps", "--all-features"]

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[lints.clippy]
module_name_repetitions = "allow"

